[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
extend-exclude = "/(tests|oapi/oas/model.py)"
target-version = [
    "py38",
    "py39",
    "py310",
    "py311",
]

[tool.isort]
profile = "black"
src_paths = [
    "oapi",
    "tests",
    "scripts",
    "setup.py",
]
line_length = 79
wrap_length = 79
multi_line_output = 3
extend_skip_glob = [
    "tests/data/languagetool.py",
]
