[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "oapi"
version = "2.0.7"
description = "A library for generating web API clients from OpenAPI documents"
readme = "README.md"
license = "MIT"
requires-python = "~=3.9"
authors = [
    { email = "david@belais.me" },
]
keywords = [
    "OpenAPI",
]
dependencies = [
    "sob~=2.0",
    "jsonpointer<4.0,>2.3",
    "typing-extensions",
]

[project.optional-dependencies]
yaml = [
    "pyyaml>2",
]
all = [
    "pyyaml>2",
]

[project.urls]
Documentation = "https://oapi.enorganic.org"
Repository = "https://github.com/enorganic/oapi"

[tool.hatch.build.targets.sdist]
packages = [
    "src/oapi",
]
sources = [
    "src",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/oapi",
]
sources = [
    "src",
]

[tool.hatch.envs.default]
python = "3.9"
dependencies = [
    "pytest",
    "mypy",
    "dependence~=1.0",
    "gittable~=0.0",
    "pyyaml>2",
    "types-PyYAML",
]
pre-install-commands = [
    "pip install --upgrade pip setuptools",
]
post-install-commands = [
    "hatch run mypy --install-types --non-interactive || echo",
]

[tool.hatch.envs.hatch-static-analysis]
extra-dependencies = [
    "dependence~=1.0",
]

[tool.hatch.envs.docs]
template = "docs"
python = "3.13"
dependencies = [
    "mkdocs-material",
    "mkdocstrings[python]",
    "black",
    "dependence~=1.0",
]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "dependence~=1.0",
    "pyyaml>2",
]
extra-args = [
    "-s",
    "-vv",
    "--doctest-modules",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = [
    "3.9",
    "3.10",
    "3.11",
    "3.12",
    "3.13",
]

[tool.ruff]
line-length = 79
extend-exclude = [
    "tests/regression-data/*",
    "src/oapi/oas/model.py",
]

[tool.ruff.lint]
ignore = [
    "F842",
    "INP001",
]
extend-select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "C",
    "N",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79

[tool.black]
line-length = 79
target-version = [
    "py39",
    "py310",
    "py311",
    "py312",
    "py313",
]

[tool.mypy]
python_version = "3.9"
files = [
    "src",
    "tests",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.coverage.report]

[tool.coverage.run]
source = [
    "src",
]
