[metadata]
name = oapi
version = 1.59.0
author_email = david@belais.me
description = An SDK for parsing OpenAPI (Swagger) 2.0 - 3.0 specifications
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/enorganic/oapi

[options]
python_requires = ~=3.7
packages = find:
include_package_data = True
install_requires =
	pyyaml>2
	iso8601~=1.1
	sob~=1.50
	jsonpointer~=2.3
	more-itertools>=8.0,<10.0
	dataclasses; python_version == "3.6"

[options.package_data]
* = py.typed
