[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "{{cookiecutter.project_name}}"
version = "0.0.0"
description = ""
readme = "README.md"
license = "MIT"
requires-python = "~=3.10"
authors = [
    { email = "{{cookiecutter.author_email}}" },
]
dependencies = [
    "oapi~=2.0",
]

[project.urls]
Documentation = "{{cookiecutter.documentation_url}}"
Repository = "{{cookiecutter.repository_url}}"

[tool.hatch.build.targets.sdist]
packages = [
    "{{cookiecutter.package_directory}}",
]
sources = [
    "src",
]

[tool.hatch.build.targets.wheel]
packages = [
    "{{cookiecutter.package_directory}}",
]

[tool.hatch.envs.default]
python = "3.10"
dependencies = [
    "pytest",
    "mypy",
    "dependence~=1.0",
    "gittable~=0.0",
    "pyyaml>2",
    "types-PyYAML",
]
post-install-commands = [
    "hatch run mypy --install-types --non-interactive || echo",
]

[tool.hatch.envs.hatch-static-analysis]
extra-dependencies = [
    "dependence~=1.0",
]

[tool.hatch.envs.docs]
template = "docs"
python = "3.13"
dependencies = [
    "mkdocs-material",
    "mkdocstrings[python]",
    "black",
    "dependence~=1.0",
]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "dependence~=1.0",
    "pyyaml>2",
]
extra-args = [
    "-s",
    "-vv",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = [
    "3.10",
    "3.11",
    "3.12",
    "3.13",
]

[tool.ruff]
line-length = 79
extend-exclude = [
    "{{cookiecutter.package_directory}}/client.py",
    "{{cookiecutter.package_directory}}/model.py",
]

[tool.ruff.lint]
ignore = [
    "F842",
    "INP001",
]
extend-select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "C",
    "N",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79

[tool.black]
line-length = 79
target-version = [
    "py39",
    "py310",
    "py311",
    "py312",
    "py313",
]

[tool.mypy]
python_version = "3.10"
files = [
    "src",
    "tests",
    "scripts",
]
mypy_path = "src"
disallow_untyped_defs = true
disallow_incomplete_defs = true
namespace_packages = true
explicit_package_bases = true

[tool.coverage.report]
fail_under = 80

[tool.coverage.run]
source = [
    "src",
]
